adding leaflet map Belon

--- a/index.html
+++ b/index.html
@@ -977,8 +977,8 @@
 <p><span style="font-size: 40px">Rhodophyceae</span></p>
 </div>
 </section>
-<section id="discriminate-green-macrophytes-using-remote-sensing" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Discriminate green macrophytes using remote sensing</h2>
+<section id="bicome---discriminate-green-macrophytes-using-remote-sensing" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Discriminate green macrophytes using remote sensing</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
@@ -997,8 +997,8 @@
 <p><img data-src="Images/BedePaperCover.png" height="450"></p>
 </div>
 </section>
-<section id="discriminate-green-macrophytes-using-remote-sensing-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Discriminate green macrophytes using remote sensing</h2>
+<section id="bicome---discriminate-green-macrophytes-using-remote-sensing-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Discriminate green macrophytes using remote sensing</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1</span> 2 <span style="opacity:0.25">3 4 5 6</span></p>
@@ -1042,8 +1042,8 @@
 <p><span style="color: black; font-size: 150px; font-weight: bold;">BiCOME Drone paper</span></p>
 </div>
 </section>
-<section id="drone-mapping-of-intertidal-vegetation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Drone mapping of Intertidal Vegetation</h2>
+<section id="bicome---drone-mapping-of-intertidal-vegetation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Drone mapping of Intertidal Vegetation</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1065,8 +1065,8 @@
 <p><img data-src="Images/micasense_SRF.png" height="650"></p>
 </div>
 </section>
-<section id="detailed-study-sites" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Detailed Study Sites</h2>
+<section id="bicome---detailed-study-sites" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Detailed Study Sites</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1151,8 +1151,8 @@ tr:nth-child(4) {
 <p><span style="font-size: 80px">2 altitudes = 2 purposes</span></p>
 </div>
 </section>
-<section id="altitudes-2-purposes" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">2 altitudes = 2 purposes</h2>
+<section id="bicome---2-altitudes-2-purposes" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - 2 altitudes = 2 purposes</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1195,8 +1195,8 @@ tr:nth-child(4) {
 <p>~ 500 000 training pixels</p>
 </div>
 </section>
-<section id="model-building" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Model Building</h2>
+<section id="bicome---model-building" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Model Building</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1245,8 +1245,8 @@ tr:nth-child(4) {
 <p><strong>D</strong>rone <strong>I</strong>ntertidal <strong>S</strong>ediment <strong>C</strong>lassification <strong>O</strong>f <strong>V</strong>egetation</p>
 </div>
 </section>
-<section id="prediction" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Prediction</h2>
+<section id="bicome---prediction" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Prediction</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1289,8 +1289,8 @@ tr:nth-child(4) {
 <p><img data-src="Data/Micasense_images/NorthDike_Pred.png" height="950"></p>
 </div>
 </section>
-<section id="validation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Validation</h2>
+<section id="bicome---validation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Validation</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1306,8 +1306,8 @@ tr:nth-child(4) {
 <p><img data-src="Images/ConfusionMatrixGlobal.png" height="950"></p>
 </div>
 </section>
-<section id="results" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Results</h2>
+<section id="bicome---results" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Results</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1326,8 +1326,8 @@ tr:nth-child(4) {
 <p><img data-src="Images/FigX-Gaf_High_Pred.png" height="1100"></p>
 </div>
 </section>
-<section id="variable-importance" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Variable Importance</h2>
+<section id="bicome---variable-importance" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Variable Importance</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1373,8 +1373,8 @@ tr:nth-child(4) {
 <p><img data-src="Images/Fig_VIP.png" height="1150"></p>
 </div>
 </section>
-<section id="submission-to-a-journal" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
-<h2 data-id="quarto-animate-title">Submission to a Journal</h2>
+<section id="bicome---submission-to-a-journal" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">BiCOME - Submission to a Journal</h2>
 <div class="absolute" style="top: 0px; left: 95%; ">
 <div class="sectionhead">
 <p><span style="opacity:0.25">1 2</span> 3 <span style="opacity:0.25">4 5 6</span></p>
@@ -1591,16 +1591,21 @@ tr:nth-child(4) {
 <div class="absolute" style="top: 28%; left: 67%; ">
 <p><img data-src="Images/Sampling_Belon.jpg" width="400"></p>
 </div>
-<p>::: {.absolute} <video id="droneVideo" muted="" autoplay="" height="800"> <source src="Videos/Drone_Belon.mp4" type="video/mp4"> Your browser does not support the video tag. </video></p>
-<style>
-  #droneVideo {
-    position: absolute;
-    top: 28%;
-    right: -3%;
-  }
-</style>
+<div class="absolute" style="top: 28%; right: -3%; ">
+<p><video data-src="Videos/Drone_Belon.mp4" height="800" controls=""><a href="Videos/Drone_Belon.mp4">Video</a></video></p>
 </div>
-<p>:::</p>
+<!-- <video id="droneVideo" muted autoplay height="800"> -->
+<!--   <source src="Videos/Drone_Belon.mp4" type="video/mp4"> -->
+<!--   Your browser does not support the video tag. -->
+<!-- </video> -->
+<!-- <style> -->
+<!--   #droneVideo { -->
+<!--     position: absolute; -->
+<!--     top: 28%; -->
+<!--     right: -3%; -->
+<!--   } -->
+<!-- </style> -->
+</div>
 <div class="fragment fade-in-then-out" data-fragment-index="4">
 <!-- This fragment will trigger the Aven animation -->
 <div class="absolute" style="top: 10%; left: 40%; ">
@@ -1687,18 +1692,123 @@ tr:nth-child(4) {
 <p><img data-src="Images/Vigo_Rhodo.jpeg" height="500"></p>
 </div>
 <div class="absolute" style="top: 17%; right: 8%; ">
-<p><img data-src="Images/Group_Marta.JPG" height="500"></p>
+<p><img data-src="Images/Group_Marta.jpg" height="500"></p>
 </div>
-<p>::: {.absolute} <video id="droneVideoVigo" muted="" autoplay="" height="550"> <source src="Videos/Marta_Sampling.mp4" type="video/mp4"> Your browser does not support the video tag. </video></p>
-<style>
-  #droneVideoVigo {
-    position: absolute;
-    top: 57%;
-    left: 40%;
-  }
-</style>
+<div class="absolute" style="top: 57%; left: 40%; ">
+<p><video data-src="Videos/Marta_Sampling.mp4" height="550" controls=""><a href="Videos/Marta_Sampling.mp4">Video</a></video></p>
 </div>
-<p>:::</p>
+<!-- <video id="droneVideoVigo" muted autoplay height="550"> -->
+<!--   <source src="Videos/Marta_Sampling.mp4" type="video/mp4"> -->
+<!--   Your browser does not support the video tag. -->
+<!-- </video> -->
+<!-- <style> -->
+<!--   #droneVideoVigo { -->
+<!--     position: absolute; -->
+<!--     top: 57%; -->
+<!--     left: 40%; -->
+<!--   } -->
+<!-- </style> -->
+</div>
+</section>
+<section id="invasea---material-methods" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA - Material &amp; Methods</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">20</span></p>
+</div>
+<div class="fragment fade-out" data-fragment-index="2">
+<div class="absolute" style="top: 7%; left: -3%; ">
+<p><img data-src="Images/Map_sites_INVASEA.png" height="1200"></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="top: 10%; left: 48%; ">
+<p><img data-src="Images/Micasense_LiDAR.jpg" height="1100"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 10%; left: 48%; ">
+<p><img data-src="Images/dji-zenmuse-l1_1.png" height="400"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 48%; bottom: 10%; ">
+<p><img data-src="Images/micasense.png" height="380"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 10%; right: 0%; ">
+<p><strong>DJI Zenmuse L1 LIDAR</strong></p>
+<ul>
+<li>4K RGB sensor</li>
+<li>IR Lidar; 240 000 pts.s-1 with single return</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 50%; right: 0%; ">
+<p><strong>MicaSense RedEdge-MX Dual</strong></p>
+<ul>
+<li>10 spectral band 444 -&gt; 840 nm</li>
+<li>8 cm /pixel at 120m height</li>
+</ul>
+</div>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/Bede_ASD_Aven.jpg" height="550"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="left: 0%; bottom: 0%; ">
+<p><img data-src="Images/Bede_ASD_Aven2.jpg" height="550"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 10%; left: 49%; ">
+<p><img data-src="Images/Quadrat_Belon.jpg" height="1150"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 10%; right: 6%; ">
+<p><img data-src="Images/Laurent_Sampling_Belon.jpg" height="1150"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="font-size: 50px;top: 39%; left: 0%; ">
+<p><img data-src="Images/ASD.png" width="450"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="top: 43%; left: 22%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" data-id="Matrice" style="top: 32%; left: 41%; ">
+<p><img data-src="Images/Matrice200.png" width="500"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" data-id="arrow" style="top: 43%; right: 22%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" data-id="DISCOV" style="top: 30%; right: 0%; ">
+<p><img data-src="Images/Sentinel2.png" height="300"></p>
+</div>
+</section>
+<section id="invasea---material-methods-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA - Material &amp; Methods</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">20</span></p>
+</div>
+<div class="absolute" data-id="Matrice" style="top: 25%; left: 0%; ">
+<p><img data-src="Images/Matrice200.png" width="1000"></p>
+</div>
+<div class="absolute" data-id="arrow" style="top: 43%; left: 45%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute" style="top: 20%; right: 0%; ">
+<p><img data-src="Images/DISCOV_logo.png" height="800"></p>
+</div>
+</section>
+<section id="invasea---results" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA - Results</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">21</span></p>
+</div>
+<div class="absolute" style="left: 0%; ">
+<iframe width="2300" height="1100" src="maps/map_pred_Belon_DISCOV1.html" title="Webpage example"></iframe>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
