--- a/index.html
+++ b/index.html
@@ -1806,8 +1806,78 @@ tr:nth-child(4) {
 <div class="absolute" style="bottom: 0%; right: -2%; ">
 <p><span style="color: black;">21</span></p>
 </div>
-<div class="absolute" style="left: 0%; ">
-<iframe width="2300" height="1100" src="maps/map_pred_Belon_DISCOV1.html" title="Webpage example"></iframe>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="left: 0%; ">
+<iframe width="2350" height="1050" src="maps/map_pred_Belon_DISCOV1.html" title="Webpage example"></iframe>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="left: 0%; bottom: 0%; ">
+<p><img data-src="Images/Scale_pred.png" height="100"></p>
+</div>
+<div class="fragment fade-out" data-fragment-index="3">
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 27%; left: 0%; ">
+<p><img data-src="Images/table_training_px.png" height="600"></p>
+</div>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 27%; right: 0%; ">
+<p><img data-src="Images/Table_training_DISCOV2.png" height="600"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="top: 27%; left: 0%; ">
+<p><img data-src="Images/table_training_px_2.png" height="600"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" data-id="Training_DISCOV2" style="top: 27%; right: 0%; ">
+<p><img data-src="Images/Table_training_DISCOV2_2.png" height="600"></p>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="3" style="top: 36%; left: 0%; ">
+<div class="greenbox absolute" style="width: 2300px; height: 80px; ">
+
+</div>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="3" style="top: 51%; left: 0%; ">
+<div class="redbox absolute" style="width: 2300px; height: 80px; ">
+
+</div>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="3" style="top: 66%; left: 0%; ">
+<div class="greenbox absolute" style="width: 2300px; height: 80px; ">
+
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="left: 19%; bottom: 0%; ">
+<p><img data-src="Images/DISCOV_logo.png" height="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="font-size: 50px;bottom: 13%; right: 17%; ">
+<p>Updated Training Dataset</p>
+</div>
+</section>
+<section id="invasea---results-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">INVASEA - Results</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3</span> 4 <span style="opacity:0.25">5 6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">21</span></p>
+</div>
+<div class="absolute" data-id="Training_DISCOV2" style="top: 35%; left: 0%; ">
+<p><img data-src="Images/Table_training_DISCOV2.png" height="270"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 43%; left: 22%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="top: 30%; left: 45%; ">
+<p><img data-src="Images/fastai.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;top: 27%; left: 44%; ">
+<p>Fast.ai workflow</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 50px;left: 44%; bottom: 29%; ">
+<p>Neurtal Network</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 43%; right: 22%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" data-id="DISCOV" style="top: 25%; right: -2%; ">
+<p><img data-src="Images/DISCOV_logoV2.png" height="550"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
