--- a/index.html
+++ b/index.html
@@ -1943,8 +1943,10 @@ tr:nth-child(4) {
 <p><img data-src="Data/Micasense_images/NorthDike_Pred.png" height="950"></p>
 </div>
 </div>
+<div class="fragment fade-out" data-fragment-index="9">
 <div class="absolute fragment fade-in" data-fragment-index="4" style="left: 42.3%; bottom: 0%; ">
 <p><img data-src="Images/Logo_BICOME.png" height="400"></p>
+</div>
 </div>
 <div class="absolute fragment fade-in-then-out" data-fragment-index="8" style="left: 0%; bottom: 0%; ">
 <p><img data-src="Images/Gaf_Low_Pred_V1.png" height="1200"></p>
@@ -1952,6 +1954,7 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-in-then-out" data-fragment-index="8" style="bottom: 0%; right: 0%; ">
 <p><img data-src="Images/Gaf_Low_Pred_V2.png" height="1200"></p>
 </div>
+<div class="fragment fade-out" data-fragment-index="10">
 <div class="absolute fragment fade-in" data-fragment-index="8" style="left: 0%; bottom: 0%; ">
 <p><img data-src="Images/DISCOV_logo.png" height="300"></p>
 </div>
@@ -1963,6 +1966,13 @@ tr:nth-child(4) {
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="9" style="bottom: 0%; right: 0%; ">
 <p><img data-src="Images/Belon_1004_Pred_V2.png" width="1000"></p>
+</div>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="10" style="left: 0%; ">
+<iframe width="2400" height="1050" src="maps/map_pred_Belon_DISCOV2.html" title="Webpage example"></iframe>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="10" style="left: 0%; bottom: 0%; ">
+<p><img data-src="Images/Scale_pred.png" height="100"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
