--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 <li class="fragment"><p><strong>2</strong> - From Hyperspectral to Multispectral</p></li>
 <li class="fragment"><p><strong>3</strong> - Study case : Drone multispectral mapping</p></li>
 <li class="fragment"><p><strong>4</strong> - DISCOV model - Application and Update for <em>Gracilaria vermiculophylla</em> prediction</p></li>
-<li class="fragment"><p><strong>5</strong> - Heatwave on Seagrass experiment</p></li>
+<li class="fragment"><p><strong>5</strong> - Impact of heatwave on <em>Nanozostera noltei</em> meadows</p></li>
 <li class="fragment"><p><strong>6</strong> - Additional work parallel to the thesis</p></li>
 <li class="fragment"><p><strong>7</strong> - Conclusion &amp; Perspectives</p></li>
 </ul>
@@ -1973,6 +1973,95 @@ tr:nth-child(4) {
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="10" style="left: 0%; bottom: 0%; ">
 <p><img data-src="Images/Scale_pred.png" height="100"></p>
+</div>
+</section>
+<section id="section-5" class="slide level2">
+<h2></h2>
+<div class="gradient_box" style="text-align: center; position: absolute; left: 50%; top: 40%; width: 2400px; transform: translate(-50%, -50%)">
+<p><span style="color: black; font-size: 150px; font-weight: bold;">Impact of heatwave on <em>Nanozostera noltei</em> meadows</span></p>
+</div>
+</section>
+<section id="context" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Context</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">22</span></p>
+</div>
+<div class="absolute" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/Bleached_Seagrasses.jpeg" height="1000"></p>
+</div>
+<div class="absolute" style="font-size: 45px;left: 0%; bottom: 9%; ">
+<p>Bleached seagrasses, June 2022, Portugal</p>
+</div>
+<div class="absolute" data-id="GafLow" style="top: 10%; right: 20%; ">
+<p><img data-src="Data\Micasense_images\Gafanha_Low.png" height="1000"></p>
+</div>
+</section>
+<section id="context-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Context</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">22</span></p>
+</div>
+<div class="absolute" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/Bleached_Seagrasses.jpeg" height="1000"></p>
+</div>
+<div class="absolute" style="font-size: 45px;left: 0%; bottom: 9%; ">
+<p>Bleached seagrasses, June 2022, Portugal</p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" data-id="GafLow" style="top: 10%; right: -3%; ">
+<p><img data-src="Data\Micasense_images\Gafanha_Low2.png" height="3000"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="font-size: 45px;left: 48%; bottom: 27%; ">
+<p>1.5°C SST Anomaly</p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" data-id="GafLow" style="top: 20%; right: 0%; ">
+<p><img data-src="Images/Marine_Heatwaves_Portugal.png" height="600"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" data-id="GafLow" style="top: 10%; right: 20%; ">
+<p><img data-src="Images/Air_Temperature_May.png" height="1000"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="font-size: 45px;bottom: 7%; right: 16%; ">
+<p>2.5 to 3.5°C air temperature anomaly</p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" data-id="GafLow" style="top: 10%; left: 48%; ">
+<p><img data-src="Images/Paper_HeatWave1.png" height="400"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="font-size: 45px;left: 48%; bottom: 25%; ">
+<p>Marine Heatwave in Winter or Spring :</p>
+<ul>
+<li>Up to <strong>50% lower biomass</strong> in Summer</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="4" data-id="GafLow" style="top: 10%; left: 48%; ">
+<p><img data-src="Images/Paper_HeatWave2.png" height="500"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="4" style="font-size: 45px;left: 48%; bottom: 25%; ">
+<p>Simulated marine heat waves on <em>Zostera marina</em> :</p>
+<ul>
+<li>Decline in photophysiological parameters, even after the temperature returns to normal</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="5" data-id="GafLow" style="top: 10%; left: 48%; ">
+<p><img data-src="Images/Paper_HeatWave3.png" height="500"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="5" style="font-size: 45px;left: 48%; bottom: 25%; ">
+<p>Simulated air heatwaves on <em>Zostera noltei</em> :</p>
+<ul>
+<li><strong>Quick response</strong> : Over-expression of heat-shock proteins occurs 30 minutes after exposure to high air temperature.</li>
+<li><strong>Long-term impact</strong> : Over-expression remains post-heat-shock.</li>
+</ul>
+</div>
+<div class="gradient_box fragment fade-in" data-fragment-index="6" style="text-align: center; position: absolute; left: 70%; top: 45%; width: 1000px; transform: translate(-50%, -50%)">
+<p><span style="color: black; font-size: 100px; font-weight: bold;">Impact of heatwave on Reflectance and on pigment composition ?</span></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
