--- a/index.html
+++ b/index.html
@@ -2063,6 +2063,28 @@ tr:nth-child(4) {
 <div class="gradient_box fragment fade-in" data-fragment-index="6" style="text-align: center; position: absolute; left: 70%; top: 45%; width: 1000px; transform: translate(-50%, -50%)">
 <p><span style="color: black; font-size: 100px; font-weight: bold;">Impact of heatwave on Reflectance and on pigment composition ?</span></p>
 </div>
+</section>
+<section id="benthic-chambers" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Benthic Chambers</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">23</span></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/Intertidal_Chambers.png" height="600"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 10%; left: 0%; ">
+<p><img data-src="Images/Intertidal_Chambers2.png" height="600"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 10%; left: 0%; ">
+<video id="droneVideo" muted="" autoplay="" height="600">
+<source src="Videos/Benthic_Chamber.mp4" type="video/mp4">
+Your browser does not support the video tag. </video>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
 <div class="footer footer-default">
