--- a/index.html
+++ b/index.html
@@ -2074,14 +2074,20 @@ tr:nth-child(4) {
 <div class="absolute" style="bottom: 0%; right: -2%; ">
 <p><span style="color: black;">23</span></p>
 </div>
-<div class="absolute fragment fade-out" data-fragment-index="1" style="top: 10%; left: 0%; ">
-<p><img data-src="Images/Intertidal_Chambers.png" height="600"></p>
+<div class="absolute fragment fade-out" data-fragment-index="1" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Intertidal_Chambers.png" height="700"></p>
 </div>
-<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 10%; left: 0%; ">
-<p><img data-src="Images/Intertidal_Chambers2.png" height="600"></p>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Intertidal_Chambers2.png" height="700"></p>
 </div>
-<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 10%; left: 0%; ">
-<video id="droneVideo" muted="" autoplay="" height="600">
+<div class="absolute" style="font-size: 80px; color: rgba(54, 128, 74,1);top: 40%; left: 60%; ">
+<p>Experiment Tank</p>
+</div>
+<div class="absolute" style="font-size: 80px; color: rgba(125, 52, 64,1);top: 50%; left: 60%; ">
+<p>Storage Tank</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" style="top: 20%; left: 0%; ">
+<video id="droneVideo" muted="" autoplay="" height="700">
 <source src="Videos/Benthic_Chamber.mp4" type="video/mp4">
 Your browser does not support the video tag. </video>
 </div>
