--- a/index.html
+++ b/index.html
@@ -2080,16 +2080,138 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 20%; left: 0%; ">
 <p><img data-src="Images/Intertidal_Chambers2.png" height="700"></p>
 </div>
-<div class="absolute" style="font-size: 80px; color: rgba(54, 128, 74,1);top: 40%; left: 60%; ">
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="font-size: 80px; color: rgba(54, 128, 74,1);top: 40%; left: 60%; ">
 <p>Experiment Tank</p>
 </div>
-<div class="absolute" style="font-size: 80px; color: rgba(125, 52, 64,1);top: 50%; left: 60%; ">
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="font-size: 80px; color: rgba(125, 52, 64,1);top: 50%; left: 60%; ">
 <p>Storage Tank</p>
 </div>
 <div class="absolute fragment fade-in" data-fragment-index="2" style="top: 20%; left: 0%; ">
-<video id="droneVideo" muted="" autoplay="" height="700">
-<source src="Videos/Benthic_Chamber.mp4" type="video/mp4">
-Your browser does not support the video tag. </video>
+<video id="droneVideo" muted="" autoplay="" height="700"> <source src="Videos/Benthic_Chamber.mp4" type="video/mp4"> Your browser does not support the video tag. </video>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="font-size: 60px;top: 30%; left: 55%; ">
+<ul>
+<li>Air Temperature : from 18 to 60°C</li>
+<li>Water Temperature : from 8°C to 55°C</li>
+<li>Programmable tides</li>
+<li>Programmable lights</li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="top: 10%; left: 55%; ">
+<p><img data-src="Images/ASD_Intertidal_Chambers.jpg" height="1000"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="font-size: 60px;top: 30%; left: 75%; ">
+<p>Establish the link between <strong>changes in reflectance</strong> and changes in <strong>pigment composition</strong>.</p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="top: 10%; left: 75%; ">
+<p><img data-src="Images/ASD.png" height="150"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="4" style="top: 10%; left: 55%; ">
+<p><img data-src="Images/Micasense_Intertidal_Chambers1.jpg" height="1000"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="4" style="top: 10%; left: 75%; ">
+<p><img data-src="Images/Micasense_Intertidal_Chambers2.jpg" height="1000"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="top: 38%; left: 55%; ">
+<p><img data-src="Images/micasense.png" height="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="top: 37%; right: 0%; ">
+<p><img data-src="Images/DISCOV_logoV2.png" height="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="5" style="top: 43%; left: 75%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+</section>
+<section id="sampling-and-acclimation" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Sampling and Acclimation</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">24</span></p>
+</div>
+<div class="absolute" style="top: 10%; left: 0%; ">
+<div id="map" style="height: 1180px; width: 800px;">
+
+</div>
+</div>
+<div class="absolute" style="left: 0%; ">
+<iframe width="1000" height="1100" src="maps/map_Chambers.html" title="Webpage example"></iframe>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="top: 10%; left: 50%; ">
+<p><img data-src="Images/Samples1.jpg" width="500"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="top: 25%; right: 0%; ">
+<p><img data-src="Images/Acclimation_Tanks.jpg" width="1200"></p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="3" style="top: 15%; right: 5%; ">
+<p><img data-src="Images/Acclimation_Tanks2.jpg" width="1200"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="4" style="top: 10%; left: 50%; ">
+<p><img data-src="Images/Bede_sampling.jpg" width="600"></p>
+</div>
+<div class="absolute fragment fade-in" data-id="seagrasses" data-fragment-index="4" style="bottom: 10%; right: 0%; ">
+<p><img data-src="Images/Samples2.jpg" width="600"></p>
+</div>
+</section>
+<section id="experimental-design" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Experimental Design</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">25</span></p>
+</div>
+<div class="absolute" data-id="seagrasses" style="top: 20%; left: 0%; ">
+<p><img data-src="Images/Samples2.jpg" width="600"></p>
+</div>
+<div class="absolute" style="top: 43%; left: 28%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="rotate-img2 absolute" style="top: 30%; left: 28%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="rotate-img1 absolute" style="top: 56%; left: 28%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="1" style="font-size: 60px;top: 25%; left: 40%; ">
+<p><strong>Control</strong> : Ambiant air temperature (~ 20°C)</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="2" data-id="txt1" style="font-size: 60px;top: 41%; left: 40%; ">
+<p><strong>Moderate Heatwave</strong> : 35°C during diurnal low tides during <strong>X</strong> days</p>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" data-id="txt2" style="font-size: 60px;top: 60%; left: 40%; ">
+<p><strong>Severe Heatwave</strong> : 45°C during diurnal low tides during <strong>X</strong> days</p>
+</div>
+</section>
+<section id="experimental-design-1" class="slide level2" data-auto-animate="true" style="font-size: 60px;">
+<h2 data-id="quarto-animate-title">Experimental Design</h2>
+<div class="absolute" style="top: 0px; left: 95%; ">
+<div class="sectionhead">
+<p><span style="opacity:0.25">1 2 3 4</span> 5 <span style="opacity:0.25">6</span></p>
+</div>
+</div>
+<div class="absolute" style="bottom: 0%; right: -2%; ">
+<p><span style="color: black;">25</span></p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" data-id="txt1" style="font-size: 60px;top: 21%; left: 0%; width: 1000px; ">
+<p><strong>Moderate Heatwave</strong> : 35°C during diurnal low tides during <strong>X</strong> days</p>
+</div>
+<div class="absolute fragment fade-out" data-fragment-index="1" data-id="txt2" style="font-size: 60px;top: 65%; left: 0%; width: 1000px; ">
+<p><strong>Severe Heatwave</strong> : 45°C during diurnal low tides during <strong>X</strong> days</p>
+</div>
+<div class="rotate-img2 absolute" style="top: 65%; left: 50%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="rotate-img1 absolute" style="top: 25%; left: 50%; ">
+<p><img data-src="Images/Arrow_right_short.png" width="300"></p>
+</div>
+<div class="absolute" style="font-size: 60px;top: 43%; left: 65%; width: 1000px; ">
+<p><strong>Recovery Period</strong> : Ambiant air temperature during <strong>X</strong> days</p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
