--- a/index.html
+++ b/index.html
@@ -2204,14 +2204,65 @@ tr:nth-child(4) {
 <div class="absolute fragment fade-out" data-fragment-index="1" data-id="txt2" style="font-size: 60px;top: 65%; left: 0%; width: 1000px; ">
 <p><strong>Severe Heatwave</strong> : 45°C during diurnal low tides during <strong>X</strong> days</p>
 </div>
-<div class="rotate-img2 absolute" style="top: 65%; left: 50%; ">
+<div class="rotate-img2 fragment fade-out absolute" data-fragment-index="1" style="top: 65%; left: 50%; ">
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
 </div>
-<div class="rotate-img1 absolute" style="top: 25%; left: 50%; ">
+<div class="rotate-img1 fragment fade-out absolute" data-fragment-index="1" style="top: 25%; left: 50%; ">
 <p><img data-src="Images/Arrow_right_short.png" width="300"></p>
 </div>
-<div class="absolute" style="font-size: 60px;top: 43%; left: 65%; width: 1000px; ">
+<div class="absolute fragment fade-out" data-fragment-index="1" style="font-size: 60px;top: 43%; left: 65%; width: 1000px; ">
 <p><strong>Recovery Period</strong> : Ambiant air temperature during <strong>X</strong> days</p>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="1" style="font-size: 60px;top: 10%; left: 0%; ">
+<p>During the experiment :</p>
+<ul>
+<li><strong>Leaves sampling</strong> :
+<ul>
+<li>triplicate at the begining and the end of the stress</li>
+<li>HPLS pigment concentration</li>
+</ul></li>
+</ul>
+</div>
+<div class="absolute fragment fade-in-then-out" data-fragment-index="2" style="font-size: 60px;top: 10%; left: 0%; ">
+<p>During the experiment :</p>
+<ul>
+<li><strong>Leaves sampling</strong> :
+<ul>
+<li>triplicate at the begining and the end of the stress</li>
+<li>HPLS pigment concentration</li>
+</ul></li>
+<li><strong>Hyperspectral measurement</strong>:
+<ul>
+<li>In continous at low tide</li>
+</ul></li>
+</ul>
+</div>
+<div class="absolute fragment fade-in" data-fragment-index="3" style="font-size: 60px;top: 10%; left: 0%; ">
+<p>During the experiment :</p>
+<ul>
+<li><strong>Leaves sampling</strong> :
+<ul>
+<li>triplicate at the begining and the end of the stress</li>
+<li>HPLS pigment concentration</li>
+</ul></li>
+<li><strong>Hyperspectral measurement</strong>:
+<ul>
+<li>In continous at low tide</li>
+</ul></li>
+<li><strong>Multispectral measurement</strong> :
+<ul>
+<li>3 times at low tide</li>
+</ul></li>
+</ul>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="1" style="top: 20%; left: 70%; ">
+<p><img data-src="Images/HPLC.png" width="300"></p>
+</div>
+<div class="fragment fade-in-then-out absolute" data-fragment-index="2" style="top: 40%; left: 70%; ">
+<p><img data-src="Images/ASD.png" width="500"></p>
+</div>
+<div class="fragment fade-in absolute" data-fragment-index="3" style="top: 40%; left: 70%; ">
+<p><img data-src="Images/Micasense.png" width="500"></p>
 </div>
 <div class="quarto-auto-generated-content">
 <p><img src="Images/nantes-universite.png" class="slide-logo"></p>
